Video whitespace fix

--- a/themes/gv_sky/css/sass/_parts_blog/article-body.sass
+++ b/themes/gv_sky/css/sass/_parts_blog/article-body.sass
@@ -161,6 +161,9 @@
 
 .node-type-blog-post
 	.field-name-body
+		
+		.gv-video
+			line-height: 0
 
 		ul
 			list-style: disc !important
@@ -175,9 +178,8 @@
 				width: 100% !important
 				height: auto !important
 
-			.gv-video:nth-child(1)
-				line-height: 0
-
+			.rtecenter:nth-child(1) .gv-video,
+			.rtecenter:nth-child(2) .gv-video
 				iframe
 					width: 100% !important
 					max-width: 700px
